Guest authenticaton firefox keypad open issue fix + react member

--- a/docroot/react/src/views/guest-authentication/guest-authentication.less
+++ b/docroot/react/src/views/guest-authentication/guest-authentication.less
@@ -274,7 +274,7 @@
     }
 }
 
-@media only screen and (max-device-width: 700px) and (orientation: landscape){
+@media only screen and (max-device-width: 735px) and (orientation: landscape){
     .guest-main-content {
         height: auto !important;
     }
